Remove reflective BitSet access